Changed the helm values for ingress

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -16,7 +16,7 @@ service:
   nodePort: 30499
 
 ingress:
-  name: ig-wisecow
+  name: sample
   enabled: true
   host: wisecow.local
   secretName: wisecow-tls
