--- a/k8s/ingress-https.yaml
+++ b/k8s/ingress-https.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: wisecow
+  name: ig-wisecow
   namespace: wisecow
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
@@ -10,7 +10,7 @@ spec:
   tls:
     - hosts:
         - wisecow.local
-      secretName: wisecow-tls   # This secret was created using mkcert
+      secretName: wisecow-tls
   rules:
     - host: wisecow.local
       http:
@@ -19,6 +19,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: wisecow
+                name: sample
                 port:
                   number: 80
